# django_projects

./: README.md
animeproj/: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
animeproj/anime/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
animeproj/anime/migrations/: 0001_initial.py  0002_anime_add_time_animerating_created_at.py  0003_remove_anime_views_animeviewcount.py  0004_alter_animeviewcount_options.py  0005_alter_animecategory_options.py  0006_anime_max_episodes.py  0007_animetheme_remove_anime_theme_anime_theme.py  0008_alter_animecategory_cnt_alter_animecategory_name_and_more.py  0009_animecomment.py  0010_anime_comment_count.py  0011_animeepisode.py  0012_anime_available_episodes.py  0013_animefavorites.py
animeproj/anime/tasks/: .env  daily.py
animeproj/anime/templatetags/: anime_custom_filters.py
animeproj/animeproj/: asgi.py  settings.py  urls.py  wsgi.py
animeproj/animeproj/crones/: updater.py
animeproj/blog/: admin.py  forms.py  models.py  urls.py  views.py
animeproj/blog/migrations/: 0001_initial.py  0002_remove_blogcontentblock_header_level_and_more.py  0003_remove_blogcontentblock_content_type.py  0004_blogpost_cover_image_blogpost_header_image.py  0005_blogcomment.py
animeproj/blog/templates/blog/: blog.html  (+1 more)
animeproj/contacts/: admin.py  forms.py  models.py  urls.py  views.py
animeproj/contacts/migrations/: 0001_initial.py  0002_remove_conversationmessage_created_by_and_more.py
animeproj/core/: urls.py  views.py
animeproj/core/templatetags/: custom_filters.py
animeproj/user/: forms.py  models.py  urls.py  views.py
animeproj/user/migrations/: 0001_initial.py  0002_delete_user.py  0003_initial.py
(+118 files in other folders)
